--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -3,27 +3,24 @@ spring:
     name: Self
   datasource:
     url: jdbc:postgresql://localhost:5432/self
-    username: ${SELF_USERNAME}
-    password: ${SELF_PASSWORD}
+    username: ${PROD_DB_USERNAME}
+    password: ${PROD_DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
-
   jpa:
-    show-sql: true
+    show-sql: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     properties:
-      format_sql: true
+      format_sql: false
       dialect: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: true
   main:
     allow-bean-definition-overriding: true
     lazy-initialization: true
-
   jackson:
     mapper:
       accept-case-insensitive-enums: true
-
 logging:
-  config: classpath:logback-dev.xml
+  config: classpath:logback-prod.xml
   level:
     web: info
