ci: update config

--- a/frontend/project.config.json
+++ b/frontend/project.config.json
@@ -1,7 +1,16 @@
 {
   "description": "健身追踪微信小程序",
   "packOptions": {
-    "ignore": [],
+    "ignore": [
+      {
+        "type": "folder",
+        "value": "refer"
+      },
+      {
+        "type": "folder",
+        "value": "node_modules"
+      }
+    ],
     "include": []
   },
   "setting": {
