ci: update app.json

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -17,6 +17,7 @@
     "pages/muscles/create/index",
     "pages/muscles/edit/index"
   ],
+  "lazyCodeLoading": "requiredComponents",
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
