--- a/frontend/project.config.json
+++ b/frontend/project.config.json
@@ -36,7 +36,7 @@
     "packNpmRelationList": [],
     "minifyWXSS": true,
     "minifyWXML": true,
-    "showES6CompileOption": false,
+    "showES6CompileOption": true,
     "useMultiFrameRuntime": true,
     "useApiHook": true,
     "useApiHostProcess": true,
