chore: fix warning

--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,10 @@
-.gradle
-build/
-logs/
-!gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-.idea/MarsCodeWorkspaceAppSettings.xml
-.idea/dataSources.xml
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
-
-### Kotlin ###
-.kotlin
-
-### VS Code ###
 .vscode/
-
-### Mac OS ###
 .DS_Store
-
 *.txt
 *.log
 logs/
 .trae
+.idea
 node_modules/
 __pycache__
 *.db
