--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,7 +2,7 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ master, main ]
+    branches: [ main ]
   
 jobs:
   deploy:
@@ -10,17 +10,14 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      # 步骤1: 检查代码
       - name: Checkout code
         uses: actions/checkout@v4
         
-      # 步骤2: 设置SSH密钥
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
           
-      # 步骤3: 连接到服务器并执行命令
       - name: Deploy to Server
         if: "startsWith(github.event.head_commit.message, 'feat') || startsWith(github.event.head_commit.message, 'fix')"
         run: |
@@ -31,33 +28,29 @@ jobs:
             # 拉取最新代码
             git pull origin ${{ github.ref_name }}
             
-            # 执行测试
-            echo "Running tests..."
-            ./gradlew test
+            # 停止并移除旧容器
+            echo "Stopping and removing old containers..."
+            docker-compose down
             
-            # 检查测试结果
-            if [ $? -ne 0 ]; then
-              echo "Tests failed! Aborting deployment."
-              exit 1
-            fi
+            # 构建新镜像
+            echo "Building new images..."
+            docker-compose build
             
-            # 编译项目
-            echo "Building project..."
-            ./gradlew build
-            
-            # 检查编译结果
+            # 检查构建结果
             if [ $? -ne 0 ]; then
               echo "Build failed! Aborting deployment."
               exit 1
             fi
             
-            # 停止旧服务（如果存在）
-            echo "Stopping old service..."
-            pkill -f "java -jar" || true
+            # 启动新容器
+            echo "Starting new containers..."
+            docker-compose up -d
             
-            # 启动新服务
-            echo "Starting new service..."
-            nohup java -jar build/libs/self-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
+            # 检查启动结果
+            if [ $? -ne 0 ]; then
+              echo "Startup failed! Aborting deployment."
+              exit 1
+            fi
             
             echo "Deployment completed successfully!"
           EOF
@@ -66,35 +59,4 @@ jobs:
           SERVER_HOST: ${{ secrets.SERVER_HOST }}
           PROJECT_PATH: ${{ secrets.PROJECT_PATH }}
           
-      # 步骤4: 发送部署通知
-      - name: Send Deployment Email
-        if: "success() && (startsWith(github.event.head_commit.message, 'feat') || startsWith(github.event.head_commit.message, 'fix'))"
-        uses: dawidd6/action-send-mail@v3
-        with:
-          # SMTP服务器配置
-          server_address: ${{ secrets.SMTP_SERVER }}
-          server_port: ${{ secrets.SMTP_PORT }}
-          username: ${{ secrets.SMTP_USERNAME }}
-          password: ${{ secrets.SMTP_PASSWORD }}
-          
-          # 邮件内容
-          subject: '✅ Deployment Successful - ${{ github.repository }}'
-          body: |
-            Hello,
-            
-            The deployment of ${{ github.repository }} to ${{ secrets.SERVER_HOST }} has been completed successfully!
-            
-            Details:
-            - Branch: ${{ github.ref_name }}
-            - Commit: ${{ github.sha }}
-            - Committer: ${{ github.actor }}
-            - Deployed at: ${{ github.event.head_commit.timestamp }}
-            
-            The service is now running on ${{ secrets.SERVER_HOST }}.
-            
-            Regards,
-            CI/CD Pipeline
-          
-          # 邮件地址
-          to: ${{ secrets.EMAIL_RECIPIENTS }}
-          from: CI/CD Pipeline <${{ secrets.SMTP_USERNAME }}>
+     
