--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,8 +6,9 @@ on:
   
 jobs:
   deploy:
-    name: Deploy to Server
+    name: Deploy
     runs-on: ubuntu-latest
+    if: "startsWith(github.event.head_commit.message, 'feat') || startsWith(github.event.head_commit.message, 'fix') || startsWith(github.event.head_commit.message, 'refactor') || startsWith(github.event.head_commit.message, 'test')"
     
     steps:
       - name: Checkout code
@@ -19,7 +20,6 @@ jobs:
           ssh-private-key: ${{ secrets.SERVER_SSH_KEY }}
           
       - name: Deploy to Server
-        if: "startsWith(github.event.head_commit.message, 'feat') || startsWith(github.event.head_commit.message, 'fix')"
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
             # 进入项目目录
