feat: wechat app config

--- a/backend/config.json
+++ b/backend/config.json
@@ -3,6 +3,7 @@
   "DEBUG": true,
   "BOOT_ENV": "development",
   "PROJECT_PATH": "/home/green/.self/",
+  "WECHAT_APP_CONFIG": "~/.self-app",
   "DB_NAME": {
     "default": "self.db",
     "development": "self.dev.db",
