patch: update docker config

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,16 @@ WORKDIR /app
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
-RUN python init_db.py
-RUN mkdir -p /root/.self
-VOLUME ["/root/.self"]
+
+# 安装当前项目，生成self可执行文件
+RUN pip install -e .
+
+# 创建必要的目录结构
+RUN mkdir -p /root/.self /root/.self-app
+
+# 挂载宿主机的配置目录
+VOLUME ["/root/.self", "/root/.self-app"]
 EXPOSE 8000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
+# 直接启动self
+CMD ["self", "start"]
