--- a/frontend/project.private.config.json
+++ b/frontend/project.private.config.json
@@ -3,7 +3,7 @@
   "projectname": "frontend",
   "condition": {},
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "coverView": true,
     "lazyloadPlaceholderEnable": false,
     "skylineRenderEnable": false,
