--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - BOOT_ENV=production
+      - TZ=Asia/Shanghai
     command: >
       sh -lc "self check-project && self start"
     restart: unless-stopped
@@ -34,6 +35,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - BOOT_ENV=production
+      - TZ=Asia/Shanghai
     command:
       - sh
       - -lc
@@ -58,6 +60,7 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
       - BOOT_ENV=production
+      - TZ=Asia/Shanghai
     command:
       - sh
       - -lc
